--- a/app/sass/screen.scss
+++ b/app/sass/screen.scss
@@ -723,6 +723,10 @@ html {
       flex-direction: column;
       align-items: center;
       padding-top: 25px;
+      max-width: 300px;
+      max-height: 300px;
+      min-width: 300px;
+      min-height: 300px;
 
     }
 
@@ -749,13 +753,35 @@ html {
         margin: 10px;
         width: 85%;
         height: 75%;
-        table {
-          th {
-            font-weight: bold;
-          }
+
+        #calendario{
           width: 100%;
           height: 100%;
+          #calendario-header{
+            font-weight: bold;
+            display: flex;
+            flex-direction: row;
+            justify-content: space-around;
+            min-height: 20px;
+            min-width: 20px;
+          }
+          #calendario-dias{
+            display: flex;
+            flex-direction: row;
+            justify-content: space-around;
+            flex-wrap: wrap;
+            .calendario-dia-with-event{
+              font-weight: bold;
+              cursor: pointer;
+            }
+            .calendario-dia{
+              min-height: 28px;
+              min-width: 30px;
+              text-align: center;
+            }
+          }
         }
+
       }
     }
 
