--- a/app/stylesheets/screen.css
+++ b/app/stylesheets/screen.css
@@ -2,7 +2,7 @@
  * In this file you should write your main styles. (or centralize your imports)
  * Import this file using the following HTML or equivalent:
  * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
-/* line 5, ../../../../../Ruby22-x64/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 5, ../../../../../RailsInstaller/Ruby2.1.0/lib/ruby/gems/2.1.0/gems/compass-core-1.0.1/stylesheets/compass/reset/_utilities.scss */
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -24,45 +24,45 @@ time, mark, audio, video {
   vertical-align: baseline;
 }
 
-/* line 22, ../../../../../Ruby22-x64/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 22, ../../../../../RailsInstaller/Ruby2.1.0/lib/ruby/gems/2.1.0/gems/compass-core-1.0.1/stylesheets/compass/reset/_utilities.scss */
 html {
   line-height: 1;
 }
 
-/* line 24, ../../../../../Ruby22-x64/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 24, ../../../../../RailsInstaller/Ruby2.1.0/lib/ruby/gems/2.1.0/gems/compass-core-1.0.1/stylesheets/compass/reset/_utilities.scss */
 ol, ul {
   list-style: none;
 }
 
-/* line 26, ../../../../../Ruby22-x64/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 26, ../../../../../RailsInstaller/Ruby2.1.0/lib/ruby/gems/2.1.0/gems/compass-core-1.0.1/stylesheets/compass/reset/_utilities.scss */
 table {
   border-collapse: collapse;
   border-spacing: 0;
 }
 
-/* line 28, ../../../../../Ruby22-x64/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 28, ../../../../../RailsInstaller/Ruby2.1.0/lib/ruby/gems/2.1.0/gems/compass-core-1.0.1/stylesheets/compass/reset/_utilities.scss */
 caption, th, td {
   text-align: left;
   font-weight: normal;
   vertical-align: middle;
 }
 
-/* line 30, ../../../../../Ruby22-x64/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 30, ../../../../../RailsInstaller/Ruby2.1.0/lib/ruby/gems/2.1.0/gems/compass-core-1.0.1/stylesheets/compass/reset/_utilities.scss */
 q, blockquote {
   quotes: none;
 }
-/* line 103, ../../../../../Ruby22-x64/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 103, ../../../../../RailsInstaller/Ruby2.1.0/lib/ruby/gems/2.1.0/gems/compass-core-1.0.1/stylesheets/compass/reset/_utilities.scss */
 q:before, q:after, blockquote:before, blockquote:after {
   content: "";
   content: none;
 }
 
-/* line 32, ../../../../../Ruby22-x64/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 32, ../../../../../RailsInstaller/Ruby2.1.0/lib/ruby/gems/2.1.0/gems/compass-core-1.0.1/stylesheets/compass/reset/_utilities.scss */
 a img {
   border: none;
 }
 
-/* line 116, ../../../../../Ruby22-x64/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 116, ../../../../../RailsInstaller/Ruby2.1.0/lib/ruby/gems/2.1.0/gems/compass-core-1.0.1/stylesheets/compass/reset/_utilities.scss */
 article, aside, details, figcaption, figure, footer, header, hgroup, main, menu, nav, section, summary {
   display: block;
 }
@@ -1074,7 +1074,8 @@ html {
 /* line 1012, ../sass/screen.scss */
 #administracion,
 #noticias,
-#servicios-inner {
+#servicios-inner,
+#revistas {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -1086,12 +1087,13 @@ html {
   /* line 1012, ../sass/screen.scss */
   #administracion,
   #noticias,
-  #servicios-inner {
+  #servicios-inner,
+  #revistas {
     margin-top: 50px;
   }
 }
 
-/* line 1038, ../sass/screen.scss */
+/* line 1039, ../sass/screen.scss */
 .administracion-title,
 #administracion-form,
 .administracion-separator,
@@ -1108,12 +1110,12 @@ html {
   max-width: 1000px;
 }
 
-/* line 1055, ../sass/screen.scss */
+/* line 1056, ../sass/screen.scss */
 #ingreso-form {
   width: 100%;
 }
 
-/* line 1059, ../sass/screen.scss */
+/* line 1060, ../sass/screen.scss */
 #administracion-form,
 #nuevo-usuario-form,
 #ingreso-form {
@@ -1121,7 +1123,7 @@ html {
   flex-direction: column;
   justify-content: flex-start;
 }
-/* line 1065, ../sass/screen.scss */
+/* line 1066, ../sass/screen.scss */
 #administracion-form .administracion-inputs,
 #administracion-form .nuevo-usuario-inputs,
 #nuevo-usuario-form .administracion-inputs,
@@ -1133,7 +1135,7 @@ html {
   flex-wrap: wrap;
 }
 
-/* line 1074, ../sass/screen.scss */
+/* line 1075, ../sass/screen.scss */
 #administracion-oferta,
 #administracion-noticias,
 #administracion-sliders {
@@ -1144,7 +1146,7 @@ html {
   justify-content: flex-start;
 }
 
-/* line 1086, ../sass/screen.scss */
+/* line 1087, ../sass/screen.scss */
 .administracion-title,
 .nuevo-usuario-title,
 .noticias-title,
@@ -1163,7 +1165,7 @@ html {
   background-image: linear-gradient(to right, #dedede, #ffffff);
 }
 @media (max-width: 600px) {
-  /* line 1086, ../sass/screen.scss */
+  /* line 1087, ../sass/screen.scss */
   .administracion-title,
   .nuevo-usuario-title,
   .noticias-title,
@@ -1172,19 +1174,19 @@ html {
   }
 }
 
-/* line 1104, ../sass/screen.scss */
+/* line 1105, ../sass/screen.scss */
 .administracion-input,
 .nuevo-usuario-input {
   display: flex;
   flex-direction: column;
   padding: 10px;
 }
-/* line 1109, ../sass/screen.scss */
+/* line 1110, ../sass/screen.scss */
 .administracion-input span,
 .nuevo-usuario-input span {
   margin: 5px;
 }
-/* line 1114, ../sass/screen.scss */
+/* line 1115, ../sass/screen.scss */
 .administracion-input input,
 .administracion-input select,
 .nuevo-usuario-input input,
@@ -1198,7 +1200,7 @@ html {
   margin-bottom: 5px;
 }
 
-/* line 1129, ../sass/screen.scss */
+/* line 1130, ../sass/screen.scss */
 .administracion-input textarea {
   -webkit-border-radius: 10px;
   -moz-border-radius: 10px;
@@ -1211,13 +1213,13 @@ html {
   min-height: 300px;
 }
 
-/* line 1144, ../sass/screen.scss */
+/* line 1145, ../sass/screen.scss */
 .administracion-button-bar,
 .nuevo-usuario-button-bar {
   display: flex;
   flex-direction: row;
 }
-/* line 1150, ../sass/screen.scss */
+/* line 1151, ../sass/screen.scss */
 .administracion-button-bar button,
 .nuevo-usuario-button-bar button {
   background-color: transparent;
@@ -1225,13 +1227,13 @@ html {
   margin-bottom: 20px;
   margin-top: 20px;
 }
-/* line 1156, ../sass/screen.scss */
+/* line 1157, ../sass/screen.scss */
 .administracion-button-bar button:hover,
 .nuevo-usuario-button-bar button:hover {
   border-bottom-color: #17384B;
 }
 
-/* line 1161, ../sass/screen.scss */
+/* line 1162, ../sass/screen.scss */
 .administracion-separator {
   width: 100%;
   height: 2px !important;
@@ -1241,7 +1243,7 @@ html {
   margin-bottom: 50px;
 }
 
-/* line 1170, ../sass/screen.scss */
+/* line 1171, ../sass/screen.scss */
 .administracion-fotos {
   display: flex;
   flex-direction: row;
@@ -1249,7 +1251,7 @@ html {
   margin-bottom: 10px;
 }
 
-/* line 1178, ../sass/screen.scss */
+/* line 1179, ../sass/screen.scss */
 .administracion-fotos span {
   margin-top: 20px;
   margin-bottom: 10px;
@@ -1258,7 +1260,7 @@ html {
   font-size: 15px;
 }
 
-/* line 1187, ../sass/screen.scss */
+/* line 1188, ../sass/screen.scss */
 .input-foto {
   height: 39px;
   width: 39px;
@@ -1271,13 +1273,13 @@ html {
   margin-bottom: 5px;
   margin-top: 5px;
 }
-/* line 1199, ../sass/screen.scss */
+/* line 1200, ../sass/screen.scss */
 .input-foto input {
   opacity: 0;
   height: 39px;
   width: 39px;
 }
-/* line 1204, ../sass/screen.scss */
+/* line 1205, ../sass/screen.scss */
 .input-foto img {
   position: absolute;
   max-height: 38px;
@@ -1287,7 +1289,7 @@ html {
   border-radius: 2px;
 }
 
-/* line 1214, ../sass/screen.scss */
+/* line 1215, ../sass/screen.scss */
 .administracion-sub-title {
   font-family: "Montserrat Semibold", sans-serif;
   font-size: 25px;
@@ -1298,14 +1300,14 @@ html {
 }
 
 /*NOTICIAS*/
-/* line 1226, ../sass/screen.scss */
+/* line 1227, ../sass/screen.scss */
 #noticias-filtro {
   display: flex;
   padding: 20px;
   flex-direction: row;
   justify-content: left;
 }
-/* line 1231, ../sass/screen.scss */
+/* line 1232, ../sass/screen.scss */
 #noticias-filtro select {
   margin-right: 2%;
   height: 32px;
@@ -1318,12 +1320,12 @@ html {
   background-color: transparent;
 }
 
-/* line 1274, ../sass/screen.scss */
+/* line 1275, ../sass/screen.scss */
 #noticias-main {
   background-color: #133548;
 }
 
-/* line 1279, ../sass/screen.scss */
+/* line 1280, ../sass/screen.scss */
 #noticias-form {
   max-width: 1000px;
   width: 100%;
@@ -1333,24 +1335,24 @@ html {
   background-color: white;
 }
 
-/* line 1289, ../sass/screen.scss */
+/* line 1290, ../sass/screen.scss */
 #noticias-panel {
   margin: 35px;
 }
 
 @media (min-width: 385px) {
-  /* line 1294, ../sass/screen.scss */
+  /* line 1295, ../sass/screen.scss */
   #noticias-panel-fotos {
     max-width: 50%;
   }
 }
-/* line 1298, ../sass/screen.scss */
+/* line 1299, ../sass/screen.scss */
 #noticias-panel-fotos #noticias-panel-fotos-main {
   overflow: hidden;
   min-height: 400px;
   min-width: 300px;
 }
-/* line 1302, ../sass/screen.scss */
+/* line 1303, ../sass/screen.scss */
 #noticias-panel-fotos #noticias-panel-fotos-main img {
   margin-left: 15px;
   border-radius: 5px;
@@ -1359,7 +1361,7 @@ html {
   max-width: 300px;
   min-width: 300px;
 }
-/* line 1312, ../sass/screen.scss */
+/* line 1313, ../sass/screen.scss */
 #noticias-panel-fotos #noticias-panel-fotos-thumbs img {
   margin-left: 15px;
   margin-top: 5px;
@@ -1368,12 +1370,12 @@ html {
   border-radius: 2px;
 }
 
-/* line 1322, ../sass/screen.scss */
+/* line 1323, ../sass/screen.scss */
 #noticias-panel-texto {
   color: white;
   padding: 5px;
 }
-/* line 1325, ../sass/screen.scss */
+/* line 1326, ../sass/screen.scss */
 #noticias-panel-texto #noticias-panel-titulo {
   width: 100%;
   margin-bottom: 15px;
@@ -1383,7 +1385,7 @@ html {
   color: #FFFFFF;
   font-family: 'Lato Heavy', serif;
 }
-/* line 1336, ../sass/screen.scss */
+/* line 1337, ../sass/screen.scss */
 #noticias-panel-texto #noticias-panel-detalle {
   font-family: 'Montserrat Light', serif;
   width: 95%;
@@ -1397,21 +1399,21 @@ html {
 }
 
 @media (min-width: 600px) {
-  /* line 1349, ../sass/screen.scss */
+  /* line 1350, ../sass/screen.scss */
   #noticias-panel {
     display: flex;
     flex-direction: row-reverse;
   }
 }
 
-/* line 1356, ../sass/screen.scss */
+/* line 1357, ../sass/screen.scss */
 #noticias-nuevo-comentario {
   display: flex;
   flex-direction: column;
   align-items: center;
   width: 100%;
 }
-/* line 1361, ../sass/screen.scss */
+/* line 1362, ../sass/screen.scss */
 #noticias-nuevo-comentario textarea {
   width: 100%;
   right: 5px;
@@ -1422,14 +1424,14 @@ html {
   -moz-border-radius: 15px;
   border-radius: 15px;
 }
-/* line 1373, ../sass/screen.scss */
+/* line 1374, ../sass/screen.scss */
 #noticias-nuevo-comentario div {
   width: 90%;
   position: relative;
   margin-top: -45px;
   margin-bottom: 20px;
 }
-/* line 1378, ../sass/screen.scss */
+/* line 1379, ../sass/screen.scss */
 #noticias-nuevo-comentario div #noticias-nuevo-btn {
   width: 110px;
   background-color: white;
@@ -1444,19 +1446,19 @@ html {
   text-align: center;
 }
 
-/* line 1395, ../sass/screen.scss */
+/* line 1396, ../sass/screen.scss */
 #noticias-comentarios {
   background-color: #3f6175;
   color: white;
 }
-/* line 1398, ../sass/screen.scss */
+/* line 1399, ../sass/screen.scss */
 #noticias-comentarios #noticias-comentarios-list {
   max-width: 90%;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
-/* line 1405, ../sass/screen.scss */
+/* line 1406, ../sass/screen.scss */
 #noticias-comentarios #noticias-comentarios-title {
   width: 90%;
   font-family: 'Lato Heavy', serif;
@@ -1468,17 +1470,17 @@ html {
   font-size: 38px;
   line-height: 25px;
 }
-/* line 1417, ../sass/screen.scss */
+/* line 1418, ../sass/screen.scss */
 #noticias-comentarios .noticias-comentario {
   max-width: 90%;
   margin-bottom: 20px;
 }
-/* line 1421, ../sass/screen.scss */
+/* line 1422, ../sass/screen.scss */
 #noticias-comentarios .noticias-comentario .noticia-comentario-user {
   line-height: 24px;
   font-size: 23px;
 }
-/* line 1426, ../sass/screen.scss */
+/* line 1427, ../sass/screen.scss */
 #noticias-comentarios .noticias-comentario .noticia-comentario-detalle {
   line-height: 20px;
   font-size: 17px;
@@ -1487,7 +1489,7 @@ html {
 }
 
 /*BUSQUEDAS LABORALES*/
-/* line 1439, ../sass/screen.scss */
+/* line 1440, ../sass/screen.scss */
 #busquedas-laborales {
   background-color: white;
   display: flex;
@@ -1498,16 +1500,16 @@ html {
   margin-top: 100px;
 }
 @media (max-width: 600px) {
-  /* line 1439, ../sass/screen.scss */
+  /* line 1440, ../sass/screen.scss */
   #busquedas-laborales {
     margin-top: 50px;
   }
 }
-/* line 1451, ../sass/screen.scss */
+/* line 1452, ../sass/screen.scss */
 #busquedas-laborales .busqueda-laboral:nth-child(odd) {
   background-color: #17384B;
 }
-/* line 1456, ../sass/screen.scss */
+/* line 1457, ../sass/screen.scss */
 #busquedas-laborales .busqueda-laboral:hover {
   -webkit-transform: scale(1.1, 1.1);
   -moz-transform: scale(1.1, 1.1);
@@ -1515,7 +1517,7 @@ html {
   -o-transform: scale(1.1, 1.1);
   transform: scale(1.1, 1.1);
 }
-/* line 1464, ../sass/screen.scss */
+/* line 1465, ../sass/screen.scss */
 #busquedas-laborales .busqueda-laboral {
   color: white;
   background-color: #406276;
@@ -1528,25 +1530,25 @@ html {
   margin-top: 10px;
   margin-bottom: 10px;
 }
-/* line 1480, ../sass/screen.scss */
+/* line 1481, ../sass/screen.scss */
 #busquedas-laborales .busqueda-laboral .busqueda-laboral-title {
   font-family: 'Lato Heavy', serif;
   font-variant: small-caps;
   font-size: 38px;
   padding: 15px;
 }
-/* line 1487, ../sass/screen.scss */
+/* line 1488, ../sass/screen.scss */
 #busquedas-laborales .busqueda-laboral .busqueda-laboral-texto {
   padding: 5px;
   font-family: 'Lato Regular', serif;
   font-size: 16px;
 }
-/* line 1492, ../sass/screen.scss */
+/* line 1493, ../sass/screen.scss */
 #busquedas-laborales .busqueda-laboral .busqueda-laboral-contacto {
   padding: 5px;
 }
 
-/* line 1498, ../sass/screen.scss */
+/* line 1499, ../sass/screen.scss */
 #busqueda-laboral-search {
   width: 100%;
   background-color: #000000;
@@ -1556,7 +1558,7 @@ html {
   align-items: center;
   min-height: 80px;
 }
-/* line 1506, ../sass/screen.scss */
+/* line 1507, ../sass/screen.scss */
 #busqueda-laboral-search input {
   background-color: transparent;
   max-width: 800px;
@@ -1570,33 +1572,33 @@ html {
   margin: 10px;
   padding: 10px;
 }
-/* line 1519, ../sass/screen.scss */
+/* line 1520, ../sass/screen.scss */
 #busqueda-laboral-search input ::-webkit-input-placeholder {
   color: #99C1DA;
 }
-/* line 1523, ../sass/screen.scss */
+/* line 1524, ../sass/screen.scss */
 #busqueda-laboral-search input :-moz-placeholder {
   /* Firefox 18- */
   color: #99C1DA;
 }
-/* line 1528, ../sass/screen.scss */
+/* line 1529, ../sass/screen.scss */
 #busqueda-laboral-search input ::-moz-placeholder {
   /* Firefox 19+ */
   color: #99C1DA;
 }
-/* line 1533, ../sass/screen.scss */
+/* line 1534, ../sass/screen.scss */
 #busqueda-laboral-search input :-ms-input-placeholder {
   color: #99C1DA;
 }
 @media (max-width: 800px) {
-  /* line 1506, ../sass/screen.scss */
+  /* line 1507, ../sass/screen.scss */
   #busqueda-laboral-search input {
     max-width: 95px;
     min-width: 95%;
   }
 }
 
-/* line 1544, ../sass/screen.scss */
+/* line 1545, ../sass/screen.scss */
 #contacto h1 {
   font-family: 'Lato Heavy', serif;
   color: white;
