--- a/app/sass/screen.scss
+++ b/app/sass/screen.scss
@@ -972,19 +972,25 @@ select option {
         color: rgb(255, 255, 255);
       }
 
-      img {
-        width: 90%;
-        height: 40%;
-        margin-top: 4%;
+      .foto_noticia{
+        width: 254px;
+        height: 150px;
         margin-bottom: 15px;
-        max-height: 150px;
-        background-color: #cccccc;
+        margin-top: 10px;
         border: 4px solid white;
         outline: 0;
         -webkit-border-radius: 20px;
         -moz-border-radius: 20px;
         border-radius: 20px;
+        overflow: hidden;
+        img {
+          height: 100vmax;
+          height: 100vmax;
+          vertical-align: middle;
+        }
       }
+
+
 
       .text-main-noticia {
         margin-top: 10px;
